?/6/2006 autofs-5.0.0
---------------------
- lookup_init cleanup and fix missed memory leak.
- use nis map order to check if update is needed.
- fix couple of memory leaks in lookup_yp.c.
- fix pasre error in replicated server module.
- correct spelling error in default config.
- fix default auth config not being installed.

20/6/2006 autofs-5.0.0_beta5
---------------------------
- re-instate v4 directory cleanup.
- backout master map lookup changes made to beta3.
- change default master map from /etc/auto.master to auto.master
  so that we always use nsswitch to locate master map.
- change default installed master map to include "+auto.master"
  to pickup NIS master map.
- correct config names in default.c (jpro@bas.ac.uk).
- check base of offset mount tree is not a mount before umounting
  its offsets.
- fix replicated mount parse for case where last name in list
  fails lookup.
- correct indirect mount expire broken by the wildcard lookup fix.
- fix up multi-mount handling when wildcard map entry present.
- fix mutex not being unlocked on map read.
- fix rpc routines not logging errors.
- fix handling of invalid directory for nobrowse hosts map
  lookup.
- add free for working var in get_default_logging.
- add inialisation for kver in autofs_point struct.
- fix sources list corruption in check_update_map_sources.
- fix memory leak in walk_tree.
- fix memory leak in rpc_portmap_getport and rpc_ping_proto.
- fix memory leak in initialisation of lookup modules.
- fix handling of master map entry update.
- fix program map handling of invalid multi-mount offsets.
- move autofs4 module loading back to init script.
- add export access list matching to "hosts" lookup module.
- add check for key length to long (Jeff Moyer).
- add patch to restrict /proc lookup to pid directories (Jeff Moyer).
- fix directory cleanup at exit.

2/6/2006 autofs-5.0.0_beta4
---------------------------
- fix memory alloc error in nis lookup module.