@@ -6,6 +6,7 @@
 - fix pasre error in replicated server module.
 - correct spelling error in default config.
 - fix default auth config not being installed.
+- change LDAP query method as my test db was incorrect.
 
 20/6/2006 autofs-5.0.0_beta5
 ---------------------------
